--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body data-bs-spy="scroll" data-bs-target="#header" data-bs-offset="50">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top bg-dark" data-bs-theme="dark" id="header">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" id="header">
     <div class="container-fluid container-lg">
 
       <a class="logo text-uppercase" href="#section1">AuroraTours</a>
